--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-53ac21937-20230703",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
