--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
